syntax = "proto3";

option csharp_namespace = "Protos";

message ChattingMessage{
	string username = 1;
	string Message = 2;
};